--- a/bio.html
+++ b/bio.html
@@ -54,7 +54,7 @@
             <button id="menubutton" title="Menu" onmouseenter="openClose('menubar');" onclick="openClose('menubar');">Menu</button>
             <nav id="menubar" class="hidden">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a class="current" href="bio.html">About Me</a></li>
                     <li><a href="resume.html">Resume</a></li>
                 </ul>
