--- a/bio.html
+++ b/bio.html
@@ -16,9 +16,11 @@
             <p> 
                 I'm a sophomore at Northwestern University studying Computer Science and Human Development.
                 But I'm getting ahead of myself! I'm originally from Santa Monica, CA. I play Water Polo
-                and I love hiking, swimming, a good book, and travel. I'm bilingual! My dad only speaks to
-                me in Spanish. Before coming to college, I devoted a lare portion of my time to community 
-                service projects.
+                and I love hiking, swimming, a good book, and travel. I'm bilingual! I'm fluent in Spanish,
+                and proficient in Italian and French. Before coming to college, I devoted a lare portion of 
+                my time to community service projects. I've worked on and ran various endeavors including
+                asylum case interpretation, COVID-19 grocery deliveries, access to feminine hygiene products
+                at my high school, and more.
             </p>
         </div>
         <div class="text" id="academics">
@@ -39,16 +41,17 @@
             <h3>My Aspirations</h3>
             <p>
                 Community service is still incredibly important to me. As I build my CS skills, I'm always thinking
-                about how I can use them to help the people around me. My goal, when I graduate, is to work in a setting
-                where what I produce goes to efforts towards social justice, community service, and bettering the world
-                we live in. At the start of my sophomore year I declared a second major in Human Development. These classes
-                have helped me gain a more nuancesd perspective of the world around me and understand where the most work 
-                is needed. 
+                about how I can use them to help the people around me. I'm currently developing an app to help local 
+                cafes and residents work together to reduce food waste and food injustice in Evanston. My goal, when 
+                I graduate, is to work in a setting where what I produce goes to efforts towards social justice, community 
+                service, and bettering the world we live in. At the start of my sophomore year I declared a second major 
+                in Human Development. These classes have helped me gain a more nuanced perspective of the world around me 
+                and understand where the most work is needed. 
             </p>
         </div>
         <h4>
             For more information on my work experience, including teaching CS, working on user interface, and a brief stint with the State Department,
-            take a peek at my resume <a rel="Resume" href="resume.html">here</a>!
+            take a peek at my resume <a rel="Resume" href="resume.html">here</a> or in the menu!
         </h4>
         <div id="menu" onmouseleave="openClose('menubar');">
             <button id="menubutton" title="Menu" onmouseenter="openClose('menubar');" onclick="openClose('menubar');">Menu</button>
