--- a/bio.html
+++ b/bio.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <img class="b-img" src="images/profile.jpg">
+            <img aria-describedby="selfie of Anya in a blue collared button up smiling" class="b-img" src="images/profile.jpg">
             <h1>Hi! Welcome to my site</h1>
         </header>
         <div class="text" id="background">
