--- a/bio.html
+++ b/bio.html
@@ -17,7 +17,7 @@
                 I'm a sophomore at Northwestern University studying Computer Science and Human Development.
                 But I'm getting ahead of myself! I'm originally from Santa Monica, CA. I play Water Polo
                 and I love hiking, swimming, a good book, and travel. I'm bilingual! I'm fluent in Spanish,
-                and proficient in Italian and French. Before coming to college, I devoted a lare portion of 
+                and proficient in Italian and French. Before coming to college, I devoted a large portion of 
                 my time to community service projects. I've worked on and ran various endeavors including
                 asylum case interpretation, COVID-19 grocery deliveries, access to feminine hygiene products
                 at my high school, and more.
@@ -49,7 +49,7 @@
                 and understand where the most work is needed. 
             </p>
         </div>
-        <h4>
+        <h4 class="text">
             For more information on my work experience, including teaching CS, working on user interface, and a brief stint with the State Department,
             take a peek at my resume <a rel="Resume" href="resume.html">here</a> or in the menu!
         </h4>
