--- a/bio.html
+++ b/bio.html
@@ -49,7 +49,7 @@
                 and understand where the most work is needed. 
             </p>
         </div>
-        <h4 class="text">
+        <h4 class="text" id="conclusion">
             For more information on my work experience, including teaching CS, working on user interface, and a brief stint with the State Department,
             take a peek at my resume <a rel="Resume" href="resume.html">here</a> or in the menu!
         </h4>
