--- a/bio.html
+++ b/bio.html
@@ -15,7 +15,7 @@
             <h3>The Fun Stuff</h3>
             <p> 
                 I'm a sophomore at Northwestern University studying Computer Science and Human Development.
-                But I'm getting ahead of myself! I'm originally from Santa Monica, CA. I play Water Polo
+                But I'm getting ahead of myself! I'm originally from Santa Monica, CA. I play water polo
                 and I love hiking, swimming, a good book, and travel. I'm bilingual! I'm fluent in Spanish,
                 and proficient in Italian and French. Before coming to college, I devoted a large portion of 
                 my time to community service projects. I've worked on and ran various endeavors including
@@ -33,25 +33,25 @@
                 in various languages, including Python, C, and C++, as well as in exploring data structures and
                 algorithms, web development, and mathematical theory in CS. In my (limited) free time, I've been
                 teaching myself Django, Flask, and other frameworks to build personal projects such as the ones
-                back on the home page. To date, Python remains my favorite language, but I'm also enjoying exploring
+                back on the home page. To date Python remains my favorite language, but I'm also enjoying exploring
                 front-end endeavors (such as this one!)
             </p>
         </div>
         <div class="text" id="careers">
             <h3>My Aspirations</h3>
             <p>
-                Community service is still incredibly important to me. As I build my CS skills, I'm always thinking
+                Community service is still incredibly important to me. At the start of my sophomore year I declared a second major 
+                in Human Development. These classes have helped me gain a more nuanced perspective of the world around me 
+                and understand where work is needed. As I build my CS skills, I'm always thinking
                 about how I can use them to help the people around me. I'm currently developing an app to help local 
                 cafes and residents work together to reduce food waste and food injustice in Evanston. My goal, when 
                 I graduate, is to work in a setting where what I produce goes to efforts towards social justice, community 
-                service, and bettering the world we live in. At the start of my sophomore year I declared a second major 
-                in Human Development. These classes have helped me gain a more nuanced perspective of the world around me 
-                and understand where the most work is needed. 
+                service, and bettering the world we live in. 
             </p>
         </div>
         <h4 class="text" id="conclusion">
             For more information on my work experience, including teaching CS, working on user interface, and a brief stint with the State Department,
-            take a peek at my resume <a rel="Resume" href="resume.html">here</a> or in the menu!
+            take a peek at my resume <a id="biolink" rel="Resume" href="resume.html">here</a> or in the menu!
         </h4>
         <div id="menu" onmouseleave="openClose('menubar');">
             <button id="menubutton" title="Menu" onmouseenter="openClose('menubar');" onclick="openClose('menubar');">Menu</button>
