--- a/bio.html
+++ b/bio.html
@@ -43,9 +43,10 @@
                 Community service is still incredibly important to me. At the start of my sophomore year I declared a second major 
                 in Human Development. These classes have helped me gain a more nuanced perspective of the world around me 
                 and understand where work is needed. As I build my CS skills, I'm always thinking
-                about how I can use them to help the people around me. I'm currently developing an app to help local 
-                cafes and residents work together to reduce food waste and food injustice in Evanston. My goal, when 
-                I graduate, is to work in a setting where what I produce goes to efforts towards social justice, community 
+                about how I can use them to help the people around me. I'm currently project managing the development of a children's app in partnership
+                with a local author to empower and inspire young children of color. My next plan is to build an app to help local 
+                cafes and residents work together to reduce food waste and food injustice in Evanston as part of a service project I'm developing. My goal when 
+                I graduate is to work in a setting where what I produce goes to efforts towards social justice, community 
                 service, and bettering the world we live in. 
             </p>
         </div>
