--- a/bio.html
+++ b/bio.html
@@ -34,7 +34,7 @@
                 algorithms, web development, and mathematical theory in CS. In my (limited) free time, I've been
                 teaching myself Django, Flask, and other frameworks to build personal projects such as the ones
                 back on the home page. To date Python remains my favorite language, but I'm also enjoying exploring
-                front-end endeavors (such as this one!)
+                front-end endeavors (such as building this site from scratch without any templates or frameworks!)
             </p>
         </div>
         <div class="text" id="careers">
