--- a/bio.html
+++ b/bio.html
@@ -5,10 +5,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="keywords" content="Anya, Anya Bardach, Bardach, Northwestern">
-        <link rel="stylesheet" href="{% static 'website/styles.css' %}">
+        <link rel="stylesheet" href="/styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script src="{% static 'website/main.js' %}"></script>
+        <script src="/main.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <title>About Anya</title>
@@ -24,8 +24,8 @@
                 </button>
                 <div id="flexibleNav" class="">
                     <ul class="nav nav-pills">
-                        <li class="nav-item"><a class="nav-link" href="/bio">About Me</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/resume">Resume</a></li>
+                        <li class="nav-item"><a class="nav-link" href="bio.html">About Me</a></li>
+                        <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                         <li class="nav-item" style="display: inline-flex;">
                             <a href="#contact" onclick="meineFunktion()">
                                 <button id="contactButton" type="button" class="btn btn-secondary">Get in touch</button>
@@ -82,7 +82,7 @@
 </p>
 <h6 class="text" id="conclusion"><i>
 For more information on my work experience, including teaching CS, working on user interface, and non-tech work including a brief stint with the State Department,
-take a peek at my resume <a id="biolink" rel="Resume" href="/resume">here</a> or in the menu!
+take a peek at my resume <a id="biolink" rel="Resume" href="resume.html">here</a> or in the menu!
 </i></h6>
 </div>
 
