--- a/bio.html
+++ b/bio.html
@@ -101,8 +101,7 @@ take a peek at my resume <a id="biolink" rel="Resume" href="resume.html">here</a
                 <div data-bs-spy="scroll" data-bs-target="#menuHeader" data-bs-smooth-scroll="true" class="col scrollspy-example">
                     <ul id="contact">
                         <li>&#128205 Santa Monica, CA</li>
-                        <li>&#9993 anya.bardach@gmail.com</li>
-                        <li>&#128222 (310) 339-0032</li>
+                        <li>&#9993 anya[dot]bardach[at]gmail[dot]com</li>
                     </ul>
                     <ul id="links">
                         <li><a rel="Anya Bardach's Profile" href="https://www.linkedin.com/in/anyabardach">
