final touches for the night

--- a/bio.html
+++ b/bio.html
@@ -89,39 +89,7 @@ take a peek at my resume <a id="biolink" rel="Resume" href="resume.html">here</a
         
  
         <hr>
-        <footer class="container text-center row">
-                <div class="col">
-                  <h4>Skills</h4>
-                  <ul>
-                    <li> Language agnostic </li>
-                    <li> Diverse IDE and framework knowledge </li>
-                    <li> Office technology skills </li>
-                    <li> Multilingual</li>
-                </div>
-                <div data-bs-spy="scroll" data-bs-target="#menuHeader" data-bs-smooth-scroll="true" class="col scrollspy-example">
-                    <ul id="contact">
-                        <li>&#128205 Santa Monica, CA</li>
-                        <li>&#9993 anya[dot]bardach[at]gmail[dot]com</li>
-                    </ul>
-                    <ul id="links">
-                        <li><a rel="Anya Bardach's Profile" href="https://www.linkedin.com/in/anyabardach">
-                            <img class="l-img" rel="LinkedIn logo" src="/images/LinkedIn.png">
-                            <br>LinkedIn</a></li>
-                        <li><a rel="Anya Bardach's Repositories" href="https://github.com/anyabdch">
-                            <img class="l-img" rel="GitHub logo" src="/images/GitHub.png">
-                            <br>GitHub</a></li>
-                    </ul>
-                </div>
-                <div class="col">
-                    <h4>Interests</h4>
-                    <ul>
-                        <li>Sustainable tech</li>
-                        <li>User-centered software</li>
-                        <li>The New York Times Games suite</il>
-                        <li>Peak bagging</li>
-                        <li>Collective action</li>
-                    </ul>
-                </div>
-              </div>
+        <footer class="text-center row">
+                
         </footer>
     </body>
